2.3/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multitool
  labels:
    app: web
spec:
  containers:
  - name: multitool
    image: praqma/network-multitool:alpine-extra
    ports:
    - containerPort: 8082
